--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-body text-white font-poppins pb-12">
+  <body class="bg-body text-white font-poppins">
     <header class="py-6">
       <div class="container flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
         <div class="text-lg font-bold">ytsruh.com</div>
@@ -95,7 +95,7 @@
     </div>
     <!-- END HERO SECTION-->
     <!-- MY PROJECTS SECTION -->
-    <div class="container mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
+    <div class="container mt-32 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
       <section class="w-full">
         <h2 id="projects" class="secondary-title">Projects</h2>
         <p class="section-paragraph">
@@ -144,7 +144,7 @@
     </div>
     <!-- END PROJECTS SECTION -->
     <!-- WORK SECTION -->
-    <div class="container mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
+    <div class="container mt-32 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
       <section class="w-full">
         <h2 id="work" class="secondary-title">Work History</h2>
         <p class="section-paragraph">
@@ -153,7 +153,7 @@
         <div class="space-y-12 my-16">
           <!-- work -->
           <div
-            class="w-full border border-nav p-16 lg:px-16 lg:py-20 lg:space-x-32 flex flex-row justify-center lg:justify-start flex-wrap lg:flex-nowrap "
+            class="w-full border border-nav p-16 lg:px-16 lg:py-16 lg:space-x-32 flex flex-row justify-center lg:justify-start flex-wrap lg:flex-nowrap "
           >
           <!-- logo -->
             <div class="m-6 lg:mb-0 grid grid-cols-1  place-content-center md:basis-1/3">
@@ -161,7 +161,7 @@
             </div>
           <!-- info -->
             <div class="flex flex-wrap justify-center text-center lg:text-left lg:block md:basis-2/3">
-              <h3 class="text-white text-3xl font-semibold">London Stock Exchange Group plc</h3>
+              <h3 class="text-white text-3xl font-semibold">London Stock Exchange Group</h3>
 
               <div class="w-full lg:w-auto flex flex-wrap justify-center lg:justify-start gap-3 mt-6 mb-8">
                 <div class="badge">Oct 21 - Current</div>
@@ -225,12 +225,12 @@
     </div>
     <!-- END WORK SECTION -->
     <!-- CONTACT ME SECTION -->
-    <div class="container mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
+    <div class="container mt-32 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
       <section class="w-full">
         <h2 id="contact" class="secondary-title">Contact me</h2>
         <p class="section-paragraph">Feel free to to contact me any time, through any method below.</p>
 
-        <div class="w-full grid lg:grid-cols-2 gap-8 lg:gap-32 mt-24">
+        <div class="w-full grid lg:grid-cols-2 gap-8 lg:gap-32 mt-12">
           <div class="">
             <!-- Socials -->
             <div class="flex mt-20 space-x-6">
@@ -271,6 +271,11 @@
       </section>
     </div>
     <!-- END CONTACT ME SECTION -->
+    <!-- FOOTER -->
+    <div class="mt-32 flex justify-between px-8 md:px-14 lg:px-24 w-full bg-gray-900">
+      <h5 class="text-white mx-auto py-10">&copy; 2022 | Chris Hurst | All Rights Reserved</h5>
+    </div>
+    <!-- FOOTER -->
     <script src="main.js"></script>
   </body>
 </html>
