--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-body text-white font-poppins">
+  <body class="bg-body text-white font-raleway">
     <header class="py-6">
       <div class="container flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
         <div class="text-lg font-bold">ytsruh.com</div>
         <div class="hidden md:flex space-x-12 items-center">
-          <a href="#" class="text-selected-text">Home</a>
+          <a href="#" class="text-theme">Home</a>
           <a href="#projects">Projects</a>
           <a href="#work">Work History</a>
           <a href="#contact"><button class="px-6 py-2 bg-theme font-bold">Contact me</button></a>
@@ -58,12 +58,15 @@
         </nav>
 
         <div class="flex flex-wrap lg:ml-20 justify-center md:justify-start max-w-xl mt-0 md:my-36">
-          <h1 class="font-bold text-5xl md:text-6xl lg:text-7xl text-center md:text-left">
-            Digital Marketer </br>
-            & Javascript Developer
-          </h1>
+          <h1 class="font-bold text-5xl md:text-6xl lg:text-7xl text-center md:text-left">Chris Hurst</h1>
+          <h2 class="font-bold text-3xl md:text-4xl lg:text-5xl text-center md:text-left">
+            Digital Marketer & Javascript Developer
+          </h2>
           <div class="w-full flex justify-center md:justify-start">
-            <a href="#projects" class="px-8 py-4 bg-theme text-white font-bold mt-12 flex items-center space-x-3">
+            <a
+              href="#projects"
+              class="px-8 py-4 bg-theme text-white font-bold mt-12 flex items-center space-x-3"
+            >
               <div>
                 <svg
                   width="22"
@@ -99,7 +102,9 @@
       <section class="w-full">
         <h2 id="projects" class="secondary-title">Projects</h2>
         <p class="section-paragraph">
-          I've worked on a range of high impact marketing projects in my career, in both agencies as well major international companies. JavaScript has been used for projects in both a professional & personal capacity.
+          I've worked on a range of high impact marketing projects in my career, in both agencies as well
+          major international companies. JavaScript has been used for projects in both a professional &
+          personal capacity.
         </p>
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
@@ -148,18 +153,19 @@
       <section class="w-full">
         <h2 id="work" class="secondary-title">Work History</h2>
         <p class="section-paragraph">
-         I have a range of experience working in digital agenices as well multinational companies in various disiplines of digital & marketing. 
+          I have a range of experience working in digital agenices as well multinational companies in various
+          disiplines of digital & marketing.
         </p>
         <div class="space-y-12 my-16">
           <!-- work -->
           <div
-            class="w-full border border-nav p-16 lg:px-16 lg:py-16 lg:space-x-32 flex flex-row justify-center lg:justify-start flex-wrap lg:flex-nowrap "
+            class="w-full border border-nav p-16 lg:px-16 lg:py-16 lg:space-x-32 flex flex-row justify-center lg:justify-start flex-wrap lg:flex-nowrap"
           >
-          <!-- logo -->
-            <div class="m-6 lg:mb-0 grid grid-cols-1  place-content-center md:basis-1/3">
-              <img src="img/lseg.svg" alt="London Stock Exchange Logo" width="100%">
+            <!-- logo -->
+            <div class="m-6 lg:mb-0 grid grid-cols-1 place-content-center md:basis-1/3">
+              <img src="img/lseg.svg" alt="London Stock Exchange Logo" width="100%" />
             </div>
-          <!-- info -->
+            <!-- info -->
             <div class="flex flex-wrap justify-center text-center lg:text-left lg:block md:basis-2/3">
               <h3 class="text-white text-3xl font-semibold">London Stock Exchange Group</h3>
 
@@ -169,43 +175,45 @@
               </div>
 
               <p class="text-secondary">
-                Acting as product owner for all marketing websites in the group. Working with multiple develeopment teams to support, maintain & enhanced Adobe platform & Drupal.
+                Acting as product owner for all marketing websites in the group. Working with multiple
+                development teams to support, maintain & enhance the Adobe & Drupal platforms.
               </p>
             </div>
           </div>
 
           <!-- work -->
           <div
-            class="w-full border border-nav p-16 lg:px-16 lg:py-20 lg:space-x-32 flex flex-row justify-center lg:justify-start flex-wrap lg:flex-nowrap "
+            class="w-full border border-nav p-16 lg:px-16 lg:py-20 lg:space-x-32 flex flex-row justify-center lg:justify-start flex-wrap lg:flex-nowrap"
           >
-          <!-- logo -->
-            <div class="m-6 lg:mb-0 grid grid-cols-1  place-content-center md:basis-1/3">
-              <img src="img/refinitiv.jpeg" alt="London Stock Exchange Logo" width="100%">
+            <!-- logo -->
+            <div class="m-6 lg:mb-0 grid grid-cols-1 place-content-center md:basis-1/3">
+              <img src="img/refinitiv.jpeg" alt="London Stock Exchange Logo" width="100%" />
             </div>
-          <!-- info -->
+            <!-- info -->
             <div class="flex flex-wrap justify-center text-center lg:text-left lg:block md:basis-2/3">
               <h3 class="text-white text-3xl font-semibold">Refinitiv</h3>
 
               <div class="w-full lg:w-auto flex flex-wrap justify-center lg:justify-start gap-3 mt-6 mb-8">
-                <div class="badge">Jan 21 - Oct 21</div>
+                <div class="badge">Jan 19 - Oct 21</div>
                 <div class="badge">Digital Localisation Manager</div>
               </div>
 
               <p class="text-secondary">
-                Responsible for management of 6 local langauge websites built using Adobe Experience Manager. Secondary responsibility for website perfromance channels such as SEO, Paid Search & Social.
+                Responsible for management of 6 local langauge websites built using Adobe Experience Manager.
+                Secondary responsibility for website perfromance channels such as SEO, Paid Search & Social.
               </p>
             </div>
           </div>
 
           <!-- work -->
           <div
-            class="w-full border border-nav p-16 lg:px-16 lg:py-20 lg:space-x-32 flex flex-row justify-center lg:justify-start flex-wrap lg:flex-nowrap "
+            class="w-full border border-nav p-16 lg:px-16 lg:py-20 lg:space-x-32 flex flex-row justify-center lg:justify-start flex-wrap lg:flex-nowrap"
           >
-          <!-- logo -->
-            <div class="m-6 lg:mb-0 grid grid-cols-1  place-content-center md:basis-1/3">
-              <img src="img/thomson-reuters.png" alt="London Stock Exchange Logo" width="100%">
+            <!-- logo -->
+            <div class="m-6 lg:mb-0 grid grid-cols-1 place-content-center md:basis-1/3">
+              <img src="img/thomson-reuters.png" alt="London Stock Exchange Logo" width="100%" />
             </div>
-          <!-- info -->
+            <!-- info -->
             <div class="flex flex-wrap justify-center text-center lg:text-left lg:block md:basis-2/3">
               <h3 class="text-white text-3xl font-semibold">Thomson Reuters</h3>
 
@@ -215,11 +223,12 @@
               </div>
 
               <p class="text-secondary">
-                Lead & revenue generating responsibility for the MENA region of Thomson Reuters using all available digtial channels. Digital analytics and reporting dashboard integrated into CRM and sales dashboards.
+                Lead & revenue generating responsibility for the MENA region of Thomson Reuters using all
+                available digtial channels. Digital analytics and reporting dashboard integrated into CRM and
+                sales dashboards.
               </p>
             </div>
           </div>
-
         </div>
       </section>
     </div>
@@ -228,7 +237,7 @@
     <div class="container mt-32 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
       <section class="w-full">
         <h2 id="contact" class="secondary-title">Contact me</h2>
-        <p class="section-paragraph">Feel free to to contact me any time, through any method below.</p>
+        <p class="section-paragraph">Feel free to to contact me through any of the below methods.</p>
 
         <div class="w-full grid lg:grid-cols-2 gap-8 lg:gap-32 mt-12">
           <div class="">
@@ -236,12 +245,21 @@
             <div class="flex mt-20 space-x-6">
               <!-- Mail -->
               <a href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-                class="w-8 h-8 lg:w-12 lg:h-12"
-                  width="42" height="42"
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  x="0px"
+                  y="0px"
+                  class="w-8 h-8 lg:w-12 lg:h-12"
+                  width="42"
+                  height="42"
                   viewBox="0 0 50 50"
-                  style=" fill:#000000;"><path d="M 14 4 C 8.4886661 4 4 8.4886661 4 14 L 4 36 C 4 41.511334 8.4886661 46 14 46 L 36 46 C 41.511334 46 46 41.511334 46 36 L 46 14 C 46 8.4886661 41.511334 4 36 4 L 14 4 z M 13 16 L 37 16 C 37.18 16 37.349766 16.020312 37.509766 16.070312 L 27.679688 25.890625 C 26.199688 27.370625 23.790547 27.370625 22.310547 25.890625 L 12.490234 16.070312 C 12.650234 16.020312 12.82 16 13 16 z M 11.070312 17.490234 L 18.589844 25 L 11.070312 32.509766 C 11.020312 32.349766 11 32.18 11 32 L 11 18 C 11 17.82 11.020312 17.650234 11.070312 17.490234 z M 38.929688 17.490234 C 38.979688 17.650234 39 17.82 39 18 L 39 32 C 39 32.18 38.979687 32.349766 38.929688 32.509766 L 31.400391 25 L 38.929688 17.490234 z M 20 26.410156 L 20.890625 27.310547 C 22.020625 28.440547 23.510234 29 24.990234 29 C 26.480234 29 27.959844 28.440547 29.089844 27.310547 L 29.990234 26.410156 L 37.509766 33.929688 C 37.349766 33.979688 37.18 34 37 34 L 13 34 C 12.82 34 12.650234 33.979687 12.490234 33.929688 L 20 26.410156 z" fill="white"></path>
-                  </svg>
+                  style="fill: #000000"
+                >
+                  <path
+                    d="M 14 4 C 8.4886661 4 4 8.4886661 4 14 L 4 36 C 4 41.511334 8.4886661 46 14 46 L 36 46 C 41.511334 46 46 41.511334 46 36 L 46 14 C 46 8.4886661 41.511334 4 36 4 L 14 4 z M 13 16 L 37 16 C 37.18 16 37.349766 16.020312 37.509766 16.070312 L 27.679688 25.890625 C 26.199688 27.370625 23.790547 27.370625 22.310547 25.890625 L 12.490234 16.070312 C 12.650234 16.020312 12.82 16 13 16 z M 11.070312 17.490234 L 18.589844 25 L 11.070312 32.509766 C 11.020312 32.349766 11 32.18 11 32 L 11 18 C 11 17.82 11.020312 17.650234 11.070312 17.490234 z M 38.929688 17.490234 C 38.979688 17.650234 39 17.82 39 18 L 39 32 C 39 32.18 38.979687 32.349766 38.929688 32.509766 L 31.400391 25 L 38.929688 17.490234 z M 20 26.410156 L 20.890625 27.310547 C 22.020625 28.440547 23.510234 29 24.990234 29 C 26.480234 29 27.959844 28.440547 29.089844 27.310547 L 29.990234 26.410156 L 37.509766 33.929688 C 37.349766 33.979688 37.18 34 37 34 L 13 34 C 12.82 34 12.650234 33.979687 12.490234 33.929688 L 20 26.410156 z"
+                    fill="white"
+                  ></path>
+                </svg>
               </a>
               <!-- Twitter -->
               <a href="#">
@@ -261,8 +279,18 @@
               </a>
               <!-- Github -->
               <a href="#">
-                <svg width="42px" height="42px" viewBox="0 0 16 16" class="w-8 h-8 lg:w-12 lg:h-12" xmlns="http://www.w3.org/2000/svg" fill="currentColor" >
-                  <path fill="white"d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                <svg
+                  width="42px"
+                  height="42px"
+                  viewBox="0 0 16 16"
+                  class="w-8 h-8 lg:w-12 lg:h-12"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                >
+                  <path
+                    fill="white"
+                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+                  />
                 </svg>
               </a>
             </div>
@@ -272,7 +300,7 @@
     </div>
     <!-- END CONTACT ME SECTION -->
     <!-- FOOTER -->
-    <div class="mt-32 flex justify-between px-8 md:px-14 lg:px-24 w-full bg-gray-900">
+    <div class="mt-32 flex justify-between px-8 md:px-14 lg:px-24 w-full bg-theme">
       <h5 class="text-white mx-auto py-10">&copy; 2022 | Chris Hurst | All Rights Reserved</h5>
     </div>
     <!-- FOOTER -->
